# pyo3_error_handling

./: .gitignore  Cargo.toml  error_handling_example.ipynb  pyproject.toml  readme.md
error_handling/: __init__.py  error_handling.pyi
src/: error.rs  lib.rs
