[tool.poetry]
name = "error_handling"
version = "0.1.0"
description = ""
authors = ["deepgreenAN <asami73dgreen63@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]
maturin = "^0.12.4"
mypy = "^0.910"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"
